--- a/L3_Red_teaming_at_scale.ipynb
+++ b/L3_Red_teaming_at_scale.ipynb
@@ -5,7 +5,7 @@
    "id": "f4f7130d",
    "metadata": {},
    "source": [
-    "# Lesson 3: Red Teaming at Scale"
+    "# Red Teaming at Scale"
    ]
   },
   {
